[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuya-vacuum-ms1"
version = "0.1.6"
description = "Fork of tuya-vacuum with Mongsa MS1 fallback support"
authors = [
    { name = "hedoric", email = "example@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/hedoric/tuya-vacuum-ms1"
Issues = "https://github.com/hedoric/tuya-vacuum-ms1/issues"
